# memevision-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/memes/by_trigger/: chewing.json  closed_eyes.json  fist.json  head_shake.json  head_tilt.json  look_side.json  neutral_face.json  open_mouth.json  open_palm.json  peace.json  pointing.json  sad_face.json  scuba_wave_side.json  serious_face.json  thumbs_up.json  two_hand_palm_bounce.json
docs/: ADDING_MEMES.md  ASSETS_NEEDED.md  CONTRIBUTING_CODE.md  CONTRIBUTING_MEMES.md  CREATING_PLUGINS.md  MEME_LIBRARY_STRATEGY.md  RELATED_PROJECTS_REVIEW.md  ROADMAP.md  TRIGGERS.md
local_assets/: README.md
plugins/air_drawing/: manifest.json  plugin.py
plugins/anime_portal/: manifest.json
plugins/brick_breaker/: manifest.json
plugins/jujutsu_mode/: manifest.json
plugins/matrix_filter/: manifest.json
plugins/meme_reactions/: manifest.json  plugin.py
plugins/one_piece_stretch/: manifest.json
plugins/study_guardian/: manifest.json
plugins/virtual_keyboard/: manifest.json
plugins/virtual_piano/: manifest.json
scripts/: build_exe.ps1  windows_entry.py
src/memevision_lab/: __init__.py  __main__.py  app.py
src/memevision_lab/assets/: theme.qss
src/memevision_lab/core/: __init__.py  camera_worker.py  face_tracker.py  (+8 more)
templates/plugin/: README.md  manifest.json  plugin.py
tests/: test_gesture_engine.py  test_gesture_profile_engine.py  test_gesture_sample_recorder.py  test_main_window_meme_choices.py  test_meme_assets.py  test_meme_reactions.py  test_plugin_manager.py
(+1 files in other folders)
