[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memevision-lab"
version = "0.1.0"
description = "Desktop computer-vision playground for gesture memes, anime effects, tools, games, and study helpers."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [
  { name = "MemeVision Lab Contributors" }
]
dependencies = [
  "PySide6>=6.7"
]

[project.optional-dependencies]
camera = [
  "opencv-python>=4.9,<4.13",
  "numpy>=1.26,<2"
]
vision = [
  "opencv-contrib-python>=4.9,<4.12",
  "mediapipe>=0.10.21,<0.10.35",
  "numpy>=1.26,<2",
  "Pillow>=10.0",
  "imageio>=2.34",
  "pygame>=2.5"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
exe = [
  "pyinstaller>=6.10"
]
all = [
  "opencv-contrib-python>=4.9,<4.12",
  "mediapipe>=0.10.21,<0.10.35",
  "numpy>=1.26,<2",
  "Pillow>=10.0",
  "imageio>=2.34",
  "pygame>=2.5",
  "pyinstaller>=6.10",
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
memevision-lab = "memevision_lab.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memevision_lab = ["assets/*.qss"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
